--- a/libsmsninja/Makefile
+++ b/libsmsninja/Makefile
@@ -5,7 +5,7 @@ include theos/makefiles/common.mk
 
 TWEAK_NAME = libsmsninja
 libsmsninja_FILES = libsmsninja.mm SNTelephonyManager.m Hook.xm
-libsmsninja_FRAMEWORKS = UIKit AddressBook AudioToolbox CoreTelephony
+libsmsninja_FRAMEWORKS = UIKit AddressBook AudioToolbox CoreTelephony CoreData
 libsmsninja_PRIVATE_FRAMEWORKS = AppSupport
 libsmsninja_LDFLAGS = -lz -lsqlite3.0 -weak_framework CommunicationsFilter -weak_framework IMFoundation -weak_framework CallHistory
 libsmsninja_LDFLAGS += -F$(SYSROOT)/System/Library/PrivateFrameworks -L$(SYSROOT)/usr/lib/system
