iOS 5和modern ObjC syntax的坑真他妈大！把代码整个过一遍！

--- a/libsmsninja/Makefile
+++ b/libsmsninja/Makefile
@@ -7,7 +7,7 @@ TWEAK_NAME = libsmsninja
 libsmsninja_FILES = libsmsninja.mm SNTelephonyManager.m Hook.xm
 libsmsninja_FRAMEWORKS = UIKit AddressBook AudioToolbox CoreTelephony CoreData
 libsmsninja_PRIVATE_FRAMEWORKS = AppSupport
-libsmsninja_LDFLAGS = -lz -lsqlite3.0 -weak_framework CommunicationsFilter -weak_framework IMFoundation -weak_framework CallHistory
+libsmsninja_LDFLAGS = -lz -lsqlite3.0 -weak_framework CommunicationsFilter
 libsmsninja_LDFLAGS += -F$(SYSROOT)/System/Library/PrivateFrameworks -L$(SYSROOT)/usr/lib/system
 
 include $(THEOS_MAKE_PATH)/tweak.mk
